--- a/index.html
+++ b/index.html
@@ -31,16 +31,15 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <!-- Biography -->
     <section>
         <h3>About Me</h3>
-        <p>Hello! I’m Sanika, a passionate web developer with a love for creating beautiful websites. I enjoy working on projects that challenge me and allow me to grow my skills.</p>
+        <p>Hello! I’m Sanika, a passionate web developer with a love for creating pretty websites. I enjoy working on projects that challenge me and allow me to grow my skills.</p>
     </section>
     
     <!-- Skills -->
     <section>
         <h3>Skills</h3>
         <ul>
-            <li>HTML & CSS</li>
-            <li>JavaScript</li>
-            <li>React</li>
+            <li>HTML</li>
+            <li>CSS</li>
             <li>Web Design</li>
         </ul>
     </section>
@@ -48,17 +47,18 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <!-- Projects -->
     <section>
         <h3>Projects</h3>
+        <a href="https://sanikashidore.github.io/cafe-doja-website/"><h4>Restaurant Website</h4></a>
         <a href="./public/my-bday-invite.html"><h4>My Birthday Invite Project</h4></a>
         <a href="./public/movie-ranking.html"><h4>Movie Ranking List</h4></a>
-        <a href="https://sanikashidore.github.io/cafe-doja-website/"><h4>Restaurant Website</h4></a>
     </section>
 
     <!-- Contact -->
     <section>
         <h3>Contact Me</h3>
-        <p>You can reach me at <a href="sanikashidore16@gmail.com">sanikashidore16@gmail.com</a> or connect with me on <a href="https://www.linkedin.com/in/sanika" target="_blank">LinkedIn</a>.</p>
+        <p>You can reach me at <a href="mailto:sanikashidore16@gmail.com">Gmail</a> or connect with me on <a href="www.linkedin.com/in/sanika-shidore" >LinkedIn</a>.</p>
     </section>
 
     <hr/>
 </body>
 </html>
+
