--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <!-- Contact -->
     <section>
         <h3>Contact Me</h3>
-        <p>You can reach me at <a href="mailto:sanikashidore16@gmail.com">Gmail</a> or connect with me on <a href="www.linkedin.com/in/sanika-shidore" >LinkedIn</a>.</p>
+        <p>You can reach me at <a href="mailto:sanikashidore16@gmail.com">Gmail</a> or connect with me on <a href="https://www.linkedin.com/in/sanika-shidore/" >LinkedIn</a>.</p>
     </section>
 
     <hr/>
