--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <section>
         <h3>Skills</h3>
         <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Web Design</li>
+            <li>HTML, CSS, Web Design</li>
+            <li>Java, C, Python</li>
+            <li>MySQL</li>
         </ul>
     </section>
 
