--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <!-- Biography -->
     <section>
         <h3>About Me</h3>
-        <p>Hello! I’m Sanika, a passionate web developer with a love for creating pretty websites. I enjoy working on projects that challenge me and allow me to grow my skills.</p>
+        <p>Hello! I’m Sanika, a second-year computer engineering student. I enjoy working on projects that challenge me and help me grow my skills. My interests include web development and coding, and I’m always excited to explore new technologies and tackle creative problems.</p>
     </section>
     
     <!-- Skills -->
