--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 </head>
 <body>
     <h1>Sanika's Portfolio</h1>
-    <h2>Hi, I'm a Web Developer</h2>
+    <h2>Aiming to Create and Code</h2>
     <hr/>
 
     <!-- Profile Photo -->
