--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,17 @@
 <h1>The Best Movies According to Sanika</h1>
 <h2>My top 3 movies of all-time.</h2>
 <hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+
+<h3>Lighting up the Stars (2022)</h3>
+<img src="../assets/images/2ndmovie.jpg" alt="Lighting up the Stars movie poster" style="height: 200px"/>
+<p>Very cute movie. happy cried.</p>
+<hr />
+
+<h3>Spirited Away (2001)</h3>
+<img src="../assets/images/image.png"  alt="Spirited Away movie poster" style="height: 200px"/>
+<p>Best anime movie period. So satisfying to watch</p>
+<hr />
+
+<h3>Pretty Woman (1990)</h3>
+<img src="../assets/images/prettywoman.jpg" alt="pretty woman poster" style="height: 170px"/>
+<p>My favourite romcom movie</p>
