--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -7,24 +7,36 @@
     <link rel="stylesheet" href="movieliststyles.css">
 </head>
 <body>
-    <h1>The Best Movies According to Sanika</h1>
-    <h2>My top 3 movies of all-time.</h2>
-    <hr />
+    <h1 class="page-title">The Best Movies According to Sanika</h1>
+    <h2 class="page-title">My top 3 movies of all-time.</h2>
 
-    <h3>Lighting up the Stars (2022)</h3>
-    <img src="../assets/images/2ndmovie.jpg" alt="Lighting up the Stars movie poster" style="height: 200px"/>
-    <p>"Lighting Up the Stars" is a heartwarming Chinese drama that tackles the heavy themes of loss, grief, and healing in a surprisingly light and moving way. It follows the story of a former convict who crosses paths with a little girl and unexpectedly finds purpose in life through their unlikely bond. The film blends humor, tenderness, and raw emotion, supported by strong performances from the lead actors. It’s a story about rediscovery and redemption that leaves you thinking about the power of connection long after the credits roll.</p>
-    <hr />
+    <div class="movie-box">
+        <h3 class="movie-title">Lighting up the Stars (2022)</h3>
+        <div class="content-container">
+            <img src="../assets/images/2ndmovie.jpg" alt="Lighting up the Stars movie poster" class="movie-img"/>
+            <p>"Lighting Up the Stars" is a heartwarming Chinese drama that tackles the heavy themes of loss, grief, and healing in a surprisingly light and moving way. It follows the story of a former convict who crosses paths with a little girl and unexpectedly finds purpose in life through their unlikely bond. The film blends humor, tenderness, and raw emotion, supported by strong performances from the lead actors. It’s a story about rediscovery and redemption that leaves you thinking about the power of connection long after the credits roll.</p>
+            
+        </div>
+    </div>
 
-    <h3>Spirited Away (2001)</h3>
-    <img src="../assets/images/image.png"  alt="Spirited Away movie poster" style="height: 200px"/>
-    <p>Hayao Miyazaki’s "Spirited Away" is a mesmerizing animated masterpiece that transports viewers to a magical world full of strange creatures and deep, metaphorical layers. The story of young Chihiro, who finds herself in a mysterious spirit realm while trying to save her parents, is as enchanting as it is profound. With breathtaking animation, unforgettable characters, and a narrative that blends whimsy with darker, introspective themes, "Spirited Away" is a timeless tale about growing up, courage, and the beauty of self-discovery.</p>
-    <hr />
+    <br />
 
-    <h3>Pretty Woman (1990)</h3>
-    <img src="../assets/images/prettywoman.jpg" alt="Pretty Woman poster" style="height: 170px"/>
-    <p>"Pretty Woman" is a charming romantic comedy that pairs Julia Roberts and Richard Gere in one of the most iconic love stories of the '90s. The film tells the unlikely Cinderella-esque tale of a wealthy businessman and a down-on-her-luck escort who form an unexpected connection. Julia Roberts’ radiant performance as Vivian brings warmth and charisma to the role, while Richard Gere’s suave demeanor provides a perfect balance. With its memorable moments, catchy soundtrack, and fairytale charm, "Pretty Woman" is a feel-good classic that still resonates with audiences today.</p>
+    <div class="movie-box">
+        <h3 class="movie-title">Spirited Away (2001)</h3>
+        <div class="content-container">
+            <img src="../assets/images/image.png" alt="Spirited Away movie poster" class="movie-img"/>
+            <p>Hayao Miyazaki’s "Spirited Away" is a mesmerizing animated masterpiece that transports viewers to a magical world full of strange creatures and deep, metaphorical layers. The story of young Chihiro, who finds herself in a mysterious spirit realm while trying to save her parents, is as enchanting as it is profound. With breathtaking animation, unforgettable characters, and a narrative that blends whimsy with darker, introspective themes, "Spirited Away" is a timeless tale about growing up, courage, and the beauty of self-discovery.</p>
+        </div>
+    </div>
 
+    <br />
+
+    <div class="movie-box">
+        <h3 class="movie-title">Pretty Woman (1990)</h3>
+        <div class="content-container">
+            <img src="../assets/images/prettywoman.jpg" alt="Pretty Woman poster" class="movie-img" style="height: 210px;"/>
+            <p>"Pretty Woman" is a charming romantic comedy that pairs Julia Roberts and Richard Gere in one of the most iconic love stories of the '90s. The film tells the unlikely Cinderella-esque tale of a wealthy businessman and a down-on-her-luck escort who form an unexpected connection. Julia Roberts’ radiant performance as Vivian brings warmth and charisma to the role, while Richard Gere’s suave demeanor provides a perfect balance. With its memorable moments, catchy soundtrack, and fairytale charm, "Pretty Woman" is a feel-good classic that still resonates with audiences today.</p>
+        </div>
+    </div>
 </body>
 </html>
-
