--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Best Movies According to Sanika</title>
+    <title>Best Movies 🎬</title>
     <link rel="stylesheet" href="movieliststyles.css">
 </head>
 <body>
-    <h1 class="page-title">The Best Movies According to Sanika</h1>
+    <h1 class="page-title">The Best Movies in the World 🌍</h1>
     <h2 class="page-title">My top 3 movies of all-time.</h2>
 
     <div class="movie-box">
