--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <!-- Projects -->
     <section>
         <h3>Projects</h3>
+        <a href="./public/worldview.html"><h4>Country Facts Search</h4></a>
         <a href="https://sanikashidore.github.io/cafe-doja-website/"><h4>Restaurant Website</h4></a>
-        <a href="./public/my-bday-invite.html"><h4>My Birthday Invite Project</h4></a>
         <a href="./public/movie-ranking.html"><h4>Movie Ranking List</h4></a>
     </section>
 
