--- a/public/worldview.html
+++ b/public/worldview.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="worldviewstyles.css">
 </head>
 <body>
-    <h1>🌍 WorldView - Country Facts </h1>
+    <h1 style="margin-top: 9%; font-size: 3rem;">🌍 WorldView - Country Facts </h1>
     <div id="search-container">
         
         <input type="text" id="country-input" placeholder="Enter country name">
