--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="./assets/images/diamond.png" type="image/png">
     <title>Sanika's Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -38,18 +39,18 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <section>
         <h3>Skills</h3>
         <ul>
-            <li>HTML, CSS, Web Design</li>
+            <li>HTML, CSS, JavaScript</li>
             <li>Java, C, Python</li>
             <li>MySQL</li>
         </ul>
     </section>
 
     <!-- Projects -->
-    <section>
+    <section >
         <h3>Projects</h3>
-        <a href="./public/worldview.html"><h4>Country Facts Search</h4></a>
-        <a href="https://sanikashidore.github.io/cafe-doja-website/"><h4>Restaurant Website</h4></a>
-        <a href="./public/movie-ranking.html"><h4>Movie Ranking List</h4></a>
+        <a href="./public/worldview.html" class="project-link"><h4>Country Facts Search </h4></a>
+        <a href="https://sanikashidore.github.io/cafe-doja-website/" class="project-link"><h4>Restaurant Website</h4></a>
+        <a href="./public/movie-ranking.html" class="project-link"><h4>Movie Ranking List</h4></a>
     </section>
 
     <!-- Contact -->
